--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -15,7 +15,7 @@ development:
   database: wakame-spree_dev
   username: root
   password: 
-  host: 192.168.88.128
+  host: '<%= db_server %>'
 
 # Warning: The database defined as 'test' will be erased and
 # re-generated from your development database when you run 'rake'.
@@ -32,4 +32,4 @@ production:
   database: wakame-spree
   username: root
   password:  
-  host: 192.168.88.128 
+  host: '<%= db_server %>' 
